user/quarantinedLocation API
