# app/Http/Requests/API/QuarantinedUserRequest.php
@@ -1,0 +1,38 @@
+<?php
+
+namespace App\Http\Requests\API;
+
+use Illuminate\Foundation\Http\FormRequest;
+use App\Traits\API\FailedValidateTrait;
+
+class QuarantinedUserRequest extends FormRequest
+{
+    use FailedValidateTrait;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'disease_code' => 'required|max:4',
+            'quarantined_date_time' => 'required|string',
+            'location_date_time' => 'required|string',
+            'latitude' => 'required|string',
+            'longitude' => 'required|string',
+            'address' => 'required|string',
+        ];
+    }
+}
